<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ic_item"
        android:icon="@drawable/ic_icon"
        android:title="@string/menu_item_ic"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item1"
        android:title="@string/menu_item_1"
        app:showAsAction="never" />

    <item
        android:id="@+id/item2"
        android:title="@string/menu_item_2"
        app:showAsAction="never" />

    <item
        android:id="@+id/item3"
        android:title="@string/menu_item_3"
        app:showAsAction="never">


        <menu>

            <item
                android:id="@+id/subItem1"
                android:title="@string/menu_sub_item_1" />

            <item
                android:id="@+id/subItem2"
                android:title="@string/menu_sub_item_2" />


        </menu>


    </item>


</menu>